@@ -217,6 +217,7 @@ sub _serialise_properties {
       'icons'           => $table->icons,
       'max-page-size'   => $table->max_page_size,
       'max-width'       => $table->max_width,
+      'min-width'       => $table->min_width,
       'no-count'        => json_bool $table->no_count,
       'no-data-message' => $table->empty_text,
       'page-manager'    => $table->page_manager,
